deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernia
  labels:
    app: kubernia
spec:
  selector:
    app: kubernia
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
