deploy/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernia
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        # TODO: eigene Domain eintragen (z.B. kubernia.example.com)
        - kubernia.example.com
      secretName: kubernia-tls
  rules:
    - host: kubernia.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernia
                port:
                  number: 80
